# source

./: .gitignore  progs-list.txt  pull.sh
arduino/alert_button_2/: alert_button_2.ino
c/: A105_eucledian.c
c/2sem_1matrix/: CMakeLists.txt  main.c
c/Lab1_lists/: data.txt  functions.c  functions.h  lists.c  trash.txt
c/LabC_postfixNotation/: collect.txt  output.txt
c/LabC_postfixNotation/labc2/: CMakeLists.txt  collect.txt  functions.c  functions.h  functions2.c  functions2.h  input.txt  main.c  test1.cpp
c/aux_discrete/: factorial.c  task2Umn.c  task3Amn.c  task4Cmn.c  task6fib.c
c/disjoint_set_forest/: CMakeLists.txt  dsf.c  dsf.h  functions.c  functions.h  graph.c  graph.h  main.c  tests.cpp
c/disjoint_set_forest/test/: dsf_test.h  functions_test.h  graph_test.h
c/lab3hashTree/: functions.c  functions.h  main.c  tests2.cpp
c/labd2/: CMakeLists.txt  functions.c  functions.h  input.txt  main.c  tests.cpp
c/labe_gitshrub/: CMakeLists.txt  functions.c  functions.h  main.c  tests.cpp
c/memallocFiles/: main.c  memallocStressTest.c  memallocator.h  test.cpp
c/mpi/: example.c  exampleOpenmp.cpp  installation.txt  manual_openmp.sh
commands/: basicCommands.md  commands.txt  commands_win.txt  journal.txt  python-debian-install.sh  python.txt  todo.txt
commands/bioinf_spring2022project/: run_star.bash  run_star.sh  upload_fastq.sh
cpp/ComplexNumLib/: ComplexNumLib.cpp  ComplexNumLib.h  main.cpp
cpp/algs2sem_lab2no3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  mainTest.cpp  tests.cpp
cpp/arkanoid/: README.md  arkanoid-core-figure.cpp  arkanoid-core-pane.cpp  arkanoid-core.h  arkanoid-figures.cpp  arkanoid-game-pane.cpp  arkanoid.cpp  arkanoid.h  arkanoid.sln  arkanoid.vcxproj  arkanoid.vcxproj.filters  classes.cpp  classes.h  constant-dimensions.h  main.cpp  pane.cpp
cpp/aux_discrete/: task1.c  task4Cmn.c  task4cmnAlternative.c  task5vmn.c
cpp/aux_discrete_tests/: CMakeLists.txt  factorial.c  factorial.h  tests.cpp
cpp/bool/: CMakeLists.txt  main.cpp
cpp/classworkTests/: experiment.cpp  experimentDestructors.cpp  readme.md  test1.cpp  test2.cpp  test3.cpp  test4.cpp
cpp/classwork_sharedPtr/: main.cpp
cpp/epam/opencv-test/: CMakeLists.txt  main.cpp
cpp/lab2_avl/: CMakeLists.txt  functions.c  functions.h  main.c  tests.cpp
cpp/leetcode/: 105_construct_bin_tree.cpp  CMakeLists.txt
cpp/sandbox_mpi/: CMakeLists.txt  main.cpp
cpp/sandbox_omp/: CMakeLists.txt  main.cpp
cpp/sqare_eq/: CMakeLists.txt  classes.cpp  classes.h  inputInbox.txt  main.cpp
flutter/converter/: .gitignore  .metadata  README.md
flutter/hello_rectangle/: pubspec.yaml
java/: Algebra.java  ArrayQueue.java  Gcd.java  Heapify.java  INode.java  IQueue.java  InfStack.java  ONode.java  Podposledovatelnost.java  Podstroka.java  Queue.java  Queue2.java  Quicksort.java  Spisok.java  Sqrt.java  Stack.java  Task021214.java  Tree.java  WarPeace.java  alternat759.java  ex203.java  ex207.java  ex2963.java  ex2968.java  ex3571.java  ex755.java  ex756.java  ex757.java  ex758.java  ex759.java  ex765.java  ex843.java  ex844.java  ex915.java  kanikuli.java  oskaruch.java  stairsphtsh.java
java/gui/: AngryLords.java  BounceBall.java  BullsAndCows.java  Calcul.java  Complex.java  Graph.java  House.java  Joystick.java  Mndlbrt.java  StateExam.java  (+2 more)
mixed/: HoverW.ggb  HoverWModel.ggb
nanopi/: pwm1.py  sadMessage.py  test.py  testPWM.py
r/: .gitignore
sql/: constraints.sql  insert1_lecturer.sql  insert2_exam.sql  insert3_mark.sql  insert4_dropStudents.sql  q4.sql  selectInnerJoin.sql  selectQuery1_exams.sql  selectQuery2_grps.sql  selectQuery3_dropped.sql  selectQuery4_evilTeachers.sql  testYearConstraint.sql
tex/primat/discrete/aux_discrete/code/: CMakeLists.txt  amn.c  cmn.c  fib.c  func-all.c  func-all.h  permutations.c  tests.cpp  umn.c  vmn.c
wolfram/: Assessment1.nb  Assessment1_Zuev_13632_2.nb  Assessment2.nb  Lektsia_noya_25_pereslat_Valere.nb  Satellite.nb  TryToSolveSmth.nb
(+986 files in other folders)
